align error solved

--- a/src/SubPage/scss/Contents.scss
+++ b/src/SubPage/scss/Contents.scss
@@ -1,10 +1,14 @@
-.contents-page__elements {
-    display: inline-block;
-    width: 100px;
-    box-shadow: 0 1px #ffffff inset, 0 1px 3px rgba(34, 25, 25, 0.4);
-    margin: 10px 10px;
-    width: 80%;
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 30px 70px;
+.contents-page {
+    // display: inline-block;
+    // width: 800px;
+    &__elements {
+        width: 100px;
+        box-shadow: 0 1px #ffffff inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+        margin: 10px 10px;
+        width: 88%;
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 30px 70px;
+        float: right;
+    }
 }
